Changes in openair 0.4-22 [2011-06-03]
=====================================
* 	modifed key handling on plots using drawOpenKey, so  
  	key = NULL or FALSE now removes colour key.  
* 	added method = "level" to scatterPlot for binning data with
	optional smoothing, plus other code clean-ups
* 	fix bug in conditionalQuantile that labelled plots wrongly
	when site(s) has missing data
*	added ref.x and ref.y to timePlot to allow refernce lines to
	be added
* 	do not remove calm wind speed conditions in any functions
	where this is unecessary

Changes in openair 0.4-21 [2011-06-03]
=====================================
* 	fixed bug in polarAnnulus that resulsted in a failure to
	annotate the plot properly with period = "trend" and less than 1 year
	of data; improved smoothing default options used
* 	new 'statistic' option to pollutionRose to show contribution
	to counts and contribution to the mean. The latter is useful for
	displaying those wind directions that make most contribution to teh
	overall mean. Panel mean is also now shown.
* 	small change to final example of re-shaping data in importKCL
* 	timeAverage can now expand data to shorter time periods
	e.g. hourly to 15-minute. This makes it more flexible to combine data
	sets with differeing averging times. For example, daily mean particle
	data can be expanded to 1-hour means and combined with an hourly
	meteorological data set.
* 	Fix treatment of calms in checkPrep, which affected cases with
	zero wind speeds in timeAverage
*	Fix to vector averaging in timeAverage (did not include wind
	speed in calculations). For most data this will make very little
	difference, but will be more important for low wind speeds and/or
	variable wind directions.
* 	allow type = 'variable' in smoothTrend
* 	Add avg.time to smoothTrend for "month" or "year" averages

Changes in openair 0.4-20 [2011-05-31]
=====================================
* 	Do not remove calms in timeAverage