@@ -5,7 +5,7 @@ Version: 0.4-22
 Date: 2011-06-21
 Author: David Carslaw and Karl Ropkins
 Depends: R (>= 2.13.0),
-Imports: proto, grid, plyr, reshape, mgcv, zoo, lattice, boot,RColorBrewer
+Imports: proto, grid, plyr, reshape2, mgcv, zoo, lattice, boot,RColorBrewer
 Suggests: latticeExtra, hexbin
 Maintainer: David Carslaw <david.carslaw@kcl.ac.uk>
 Description: Tools to analyse, interpret and understand air pollution data. Data are typically hourly time series and both monitoring data and dispersion model output can be analysed.  Many functions can also be applied to other data, including meteorological and traffic data.
