@@ -601,7 +601,7 @@ pollutant = c("nox", "no2", "o3"))}
 \dontrun{thedata <- importKCL(site = c("my1", "kc1"), year = 2008,
 pollutant = "o3")
 thedata <- melt(thedata, measure.vars="o3")
-thedata <- cast(thedata, ... ~ site + code + variable)
+thedata <- dcast(thedata, ... ~ site + code + variable)
 ## thedata now has columns for O3 at MY1 and KC1
 ## now can export as a csv file:
 write.csv(thedata, file = "~/temp/thedata.csv")
