@@ -1,7 +1,10 @@
 Changes in openair 0.4-22 [2011-06-03]
 =====================================
-* 	modifed key handling on plots using drawOpenKey, so  
-  	key = NULL or FALSE now removes colour key.  
+*	NOTE - use reshape2 in place of reshape for speed and reliability
+* 	allow more than one pollutant with percentileRose
+* 	fixed title bug with scatterPlot - not shown for some methods
+* 	modifed key handling on plots using drawOpenKey, so
+  	key = NULL or FALSE now removes colour key.
 * 	added method = "level" to scatterPlot for binning data with
 	optional smoothing, plus other code clean-ups
 * 	fix bug in conditionalQuantile that labelled plots wrongly
